Bug 302853 - [tabbed mdi issues] Customized shortcut resetting when switching to TM tab
Summary: [tabbed mdi issues] Customized shortcut resetting when switching to TM tab
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.4
Platform: Slackware Linux
: NOR normal
Target Milestone: ---
Assignee: Simon Depiets
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-01 21:39 UTC by einars8
Modified: 2018-09-10 10:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description einars8 2012-07-01 21:39:17 UTC
When switching to open TM and back, alternative shortcut I set for 'next untranslated' resets back to default – which is none. This doen't happen with all actions – for example, 'Open...' action work as it should.

Reproducible: Always

Steps to Reproduce:
1. Go to Settings -> Configure shortcuts...
2. Change alternative shortcut for 'Next untranslated' to some free combination.
3. Switch to TM tab (previously opened) and back.
Actual Results:  
Shortcut is gone

Expected Results:  
Shortcut still works :)

I don't run full KDE desktop, only Openbox window manager. Tried to start KDE input action daemon (in System Settings) – made no difference. Kdelibs and some dependencies are self-compiled, kdesdk – precompiled package from known Slackware contributor.
Comment 1 Simon Depiets 2018-09-10 10:11:14 UTC
Git commit ba259bf56a28706482d0f058a26e1e3f23fc0d22 by Simon Depiets.
Committed on 10/09/2018 at 10:10.
Pushed by sdepiets into branch 'master'.

Reload UI XML files on tab change for shortcut updates

Summary:
This patch will reload the .ui files of the tabs (editor tab/tm/project) if a newer version exists.
This will allow propagation of the shortcut updates to the KActionCollections and new shortcuts won't be lost anymore on tab change.

https://bugs.kde.org/show_bug.cgi?id=323238
Shortcut settings being lost on every file tab switch
Steps to reproduce:
1. Open two .po files.
2. Change any shortcut settings.
3. Switch to another file tab.
4. Check the shortcut settings again.

https://bugs.kde.org/show_bug.cgi?id=302853
Customized shortcut resetting when switching to TM tab
Related: bug 323238

Test Plan:
1. Open two .po files.
2. Change any shortcut settings.
3. Switch to another file tab.
4. Check the shortcut settings again.

Reviewers: #localization, aacid, ltoscano

Subscribers: dfaure

Tags: #localization

Differential Revision: https://phabricator.kde.org/D14936

M  +8    -8    src/editortab.cpp
M  +6    -3    src/lokalizemainwindow.cpp
M  +27   -0    src/lokalizesubwindowbase.h
M  +1    -0    src/project/projecttab.cpp
M  +1    -0    src/tm/tmtab.cpp

https://commits.kde.org/lokalize/ba259bf56a28706482d0f058a26e1e3f23fc0d22