Reload UI XML files on tab change for shortcut updates

Summary:
This patch will reload the .ui files of the tabs (editor tab/tm/project) if a newer version exists.
This will allow propagation of the shortcut updates to the KActionCollections and new shortcuts won't be lost anymore on tab change.

https://bugs.kde.org/show_bug.cgi?id=323238
Shortcut settings being lost on every file tab switch
Steps to reproduce:
1. Open two .po files.
2. Change any shortcut settings.
3. Switch to another file tab.
4. Check the shortcut settings again.

https://bugs.kde.org/show_bug.cgi?id=302853
Customized shortcut resetting when switching to TM tab

BUG: 302853
BUG: 323238

Test Plan:
1. Open two .po files.
2. Change any shortcut settings.
3. Switch to another file tab.
4. Check the shortcut settings again.

Reviewers: #localization, aacid, ltoscano

Subscribers: dfaure

Tags: #localization

Differential Revision: https://phabricator.kde.org/D14936